test/org/midica/testfiles/failing/pattern-magic-cond-idx-too-high-3.midica
INCLUDE inc/instruments.midica

0:  c/d:pat_a

PATTERN pat_a
	{ if $NC == 2
		: 0/1/2
	}
END

